--- a/ChatBox.UI/Pages/Account/Register.cshtml
+++ b/ChatBox.UI/Pages/Account/Register.cshtml
@@ -2,3 +2,41 @@
 @model ChatBox.UI.Pages.Account.RegisterModel
 @{
 }
+
+
+<h2>Register</h2>
+
+<form method="post">
+    <div>
+        <label asp-for="Username"></label><br />
+        <input asp-for="Username" />
+    </div>
+
+    <br />
+
+    <div>
+        <label asp-for="Password"></label><br />
+        <input asp-for="Password" type="password" />
+    </div>
+
+
+    <br />
+
+    <button type="submit">Register</button>
+
+    </form>
+
+
+
+    @if(!string.IsNullOrEmpty(Model.ErrorMessage))
+    {
+        <p style="color: red;">@Model.ErrorMessage</p>
+    }
+
+    <hr/>
+
+
+    <p>
+        Har du redan ett konto? <a asp-page="/Account/Login">Logga in här</a>.
+    </p>
+
